fixing overlap with "add row" button

--- a/css/acf_repeater_collapser_admin.css
+++ b/css/acf_repeater_collapser_admin.css
@@ -1,6 +1,6 @@
 .field-repeater-toggle {
 	float:right;
-	margin-bottom: 10px !important;
+	margin: -5px 0 15px !important;
 }
 
 .acf_flexible_content,
